Generando template index

--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Liga Inicial de Canelones</h1>
+        <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones de Juguetes!!</span></h2>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
