--- a/MyAPP/templates/index.html
+++ b/MyAPP/templates/index.html
@@ -13,8 +13,21 @@
 </nav>
 
 <!-- Contenido de la página -->
+<section id="home" class="text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+    <div class="container text-center">
+      <div class="">
+          <div>
+              <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones de Juguetes!!</span></h2>
+          </div>
+      </div>
+  </div>
+  
+  </section>    
 <section id="inicio">
   <h1>{{title}}</h1>
+  <p>
+    Lograr ayudar a la mayor cantidad de familias que se encuentran en situación de pobreza o que atraviesa situaciones vulnerables, a través de donaciones recibidas por nuestros aliados y todas aquellas personas que emprenden trabajo social  y contribuyen con nuestra labor siempre protegiendo y fomentando valores y respeto al medio ambiente.
+  </p>
   <img src="{% static '' %}" alt="" width="120">
 </section>
 
@@ -27,26 +40,32 @@
 
 <section id="juguetes">
   <h2>Tipos de Juguetes</h2>
-  <p>
-    ¿Qué juguetes puedes donar?
-    
-    <p>
-    ¿Qué juguetes puedes donar?
-    
-    <!-- Contenido de la sección Juguetes -->
-  </p> <!-- Contenido de la sección Juguetes -->
-  </p>
+  <p>¿Qué juguetes puedes donar?</p>
+  <p>Pelotas</p>
+  <p>Juegos de cocina</p>
+  <p>Muñeca</p>
+  <p>Juego didáctico</p>
+  <p>Bicicleta</p>
+  <p>Peluches, entre otros</p>
+  
 </section>
 
 <section id="contacto">
   <h2>Contacto</h2>
   <p>
-    Ponte en contacto con nosotros...
+    Ponte en contacto con nosotros donaciones@contacto.com
     <!-- Contenido de la sección Contacto -->
   </p>
 </section>
 
+
+
 {% endblock %}
+
+
+
+
+
 
 
 
