--- a/MyAPP/templates/about.html
+++ b/MyAPP/templates/about.html
@@ -18,17 +18,18 @@
                     <div class="card-body text-center">
                         <img src="{% static 'imagenes/jp2.jpeg' %}" class="rounded-circle mb-3" width="150px">
                     <h3 class="card-title mb-3">Sitio Creado por Ignacio Cuello</h3>
-                    <p class="card-text">Python Developer Jr.</p>
+                    <p class="card-text">Estiduante python.</p>
                     <p class="card-text">Sigueme en:</p>
-                    <a href="https://github.com/johannesgperez"><i class="bi bi-github text-dark mx-1"></i></a>
-                    <a href="https://www.linkedin.com/in/johannesperez/"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                    <a href="https://github.com/Icuellos/ProyectoFinal_Ignacio_Cuello"><i class="bi bi-github text-dark mx-1"></i></a>
+                    <a href="www.linkedin.com/in/ignacio-cuello-958720127
+                    "><i class="bi bi-linkedin text-dark mx-1"></i></a>
                     </div>
                </div>
            </div>
            <div class="col">
             <div class="">
                  <div class="text-center">
-                    <p>Hola que tal! Mi nombre es Johannes y tengo un trayecto de 18 años en el área de IT. He desempeñado cargos de Desktop Support, Customer Experience Analyst, Scrum Master, entre otros. Actualmente estoy aprendiendo el lenguaje de programación Python y el Framework Django. Gracias por visitar mi página y no dejes de seguirme en mis redes sociales :)</p>
+                    <p>MI nombre es Ignacio Cuello estudiante de python en la comisión #40440 en CoderHouse. Hace más de 10 años me dedico al amálisis espacial e información geográfica. Actualmente trabajando como asistente técnico en consultora ambiental "ADAPTA Ingenieria Ambiental". No dejes de visitarme en las redes sociales!!  :)</p>
                  </div>
             </div>
         </div>
