--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Título de la página</title>
-    <link rel="stylesheet" href="ruta/al/archivo.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Tu título de página</title>
+        <link rel="stylesheet" href="style.css">
+      </head>    
 <body>
     <header>
         <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones de Juguetes!!</span></h2>
         <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/Proyectos">Ligas</a></li>
-                <li><a href="/Equipo">Equipos Infantiles</a></li>
+            <ul class="nav-links">
+                <h2><a href="/">Home</a></h2>
+                <h2><a href="/Proyectos">Ligas</a></h2>
+                <h2><a href="/Equipo">Equipos Infantiles</a></h2>
                 <li>
-                    <a href="#">Ingresar datos</a>
+                <h2><a href="#">Ingresar datos</a></h2>
                     <ul>
                         <li><a href="/Crear_Liga">Ingresa una Nueva Liga</a></li>
                         <li><a href="/Crear_form">Ingrese Nuevo Jugador</a></li>
                         <li><a href="/Crear_Equipo">Ingrese Nuevo Equipo</a></li>
                     </ul>
                 </li>
-                <li><a href="/buscar/">Buscar</a></li>
-                <li><a href="/About">About</a></li>
+                <h2><a href="/buscar/">Buscar</a></h2>
+                <h2><a href="/About">About</a></h2>
             </ul>
         </nav>
     </header>
