--- a/MyAPP/templates/index.html
+++ b/MyAPP/templates/index.html
@@ -2,32 +2,47 @@
 {% load static %}
 {% block content %}
 
-
-<!-- Navegación -->
-<nav>
-  <ul>
-    <li><a href="#inicio">Inicio</a></li>
-    <li><a href="#donacion">Donación</a></li>
-    <li><a href="#juguetes">Juguetes</a></li>
-    <li><a href="#contacto">Contacto</a></li>
-  </ul>
-</nav>
-
-<!-- Contenido de la página -->
-<section id="home" class="text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
-    <div class="container text-center">
-      <div class="">
-          <div>
-              <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones de Juguetes!!</span></h2>
-          </div>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Logo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#inicio">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#donacion">Donación</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#juguetes">Juguetes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contacto">Contacto</a>
+          </li>
+        </ul>
       </div>
+    </div>
+  </nav>
+</header>
+
+<section id="home" class="text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+  <div class="container text-center">
+    <div class="">
+      <div>
+        <h2>Bienvenid@s a la <span class="text-primary">Página de donaciones de Juguetes!!</span></h2>
+      </div>
+    </div>
   </div>
-  
-  </section>    
+</section>
+
 <section id="inicio">
   <h1>{{title}}</h1>
   <p>
-    Lograr ayudar a la mayor cantidad de familias que se encuentran en situación de pobreza o que atraviesa situaciones vulnerables, a través de donaciones recibidas por nuestros aliados y todas aquellas personas que emprenden trabajo social  y contribuyen con nuestra labor siempre protegiendo y fomentando valores y respeto al medio ambiente.
+    Lograr ayudar a la mayor cantidad de familias que se encuentran en situación de pobreza o que atraviesa situaciones vulnerables, a través de donaciones recibidas por nuestros aliados y todas aquellas personas que emprenden trabajo social y contribuyen con nuestra labor siempre protegiendo y fomentando valores y respeto al medio ambiente.
   </p>
   <img src="{% static '' %}" alt="" width="120">
 </section>
@@ -35,7 +50,7 @@
 <section id="donacion">
   <h2>Donación de Juguetes</h2>
   <p>
-    si en casa tienes juguetes de tus hijos que han dejado de darle importancia y lo tienes arrumado en cajas, bolsas o en la esquina de tu cuarto ocupando espacio y no sabes que hacer, pues te invitamos a que dones!!
+    Si en casa tienes juguetes de tus hijos que han dejado de darle importancia y los tienes arrumados en cajas, bolsas o en la esquina de tu cuarto ocupando espacio y no sabes qué hacer, ¡pues te invitamos a que dones!
   </p>
 </section>
 
@@ -48,20 +63,18 @@
   <p>Juego didáctico</p>
   <p>Bicicleta</p>
   <p>Peluches, entre otros</p>
-  
 </section>
 
 <section id="contacto">
   <h2>Contacto</h2>
   <p>
-    Ponte en contacto con nosotros donaciones@contacto.com
+    Ponte en contacto con nosotros en donaciones@contacto.com
     <!-- Contenido de la sección Contacto -->
   </p>
 </section>
 
-
-
 {% endblock %}
+
 
 
 
