Formulario para ingresar articulos

--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -24,14 +24,15 @@
             <li><a href="/Proyectos">Ligas</a></li>
             <li><a href="/Equipo">Equipos Infantiles</a></li>
             <li>
-                <a href="#">Ingresar datos</a>
+                <a href="#">Articulos</a>
                 <ul>
-                    <li><a href="/Crear_Liga">Ingresa una Nueva Liga</a></li>
+                    <li><a href="/crear_articulo">Ingresa un nuevo articulo</a></li>
                     <li><a href="/Crear_form">Ingrese Nuevo Jugador</a></li>
                     <li><a href="/Crear_Equipo">Ingrese Nuevo Equipo</a></li>
                 </ul>
             </li>
             <li><a href="/buscar/">Buscar</a></li>
+            <li><a href="/Contacto/">Contacto</a></li>
             <li><a href="/About">About</a></li>
         </ul>
     </nav>
