--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -19,10 +19,17 @@
 <header>
     <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones de Juguetes!!</span></h2>
     <nav>
+        <ul>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="{% url 'login' %}">Iniciar sesión</a></li>
+            <!-- Otros elementos de la barra de navegación -->
+        </ul>
+    </nav>
+    <nav>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
             <li><a href="/Proyectos">Ligas</a></li>
-            <li><a href="/Equipo">Equipos Infantiles</a></li>
+            <><a href="/Equipo">Equipos Infantiles</a></li>
             <li>
                 <a href="#">Articulos</a>
                 <ul>
@@ -34,6 +41,12 @@
             <li><a href="/buscar/">Buscar</a></li>
             <li><a href="/Contacto/">Contacto</a></li>
             <li><a href="/About">About</a></li>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
+            {% else %}
+                <li><a href="{% url 'login' %}">In sesión</a></li>
+                <li><a href="{% url 'register' %}">Registrarse</a></li>
+            {% endif %}
         </ul>
     </nav>
 </header>
