--- a/Perfiles/templates/registro.html
+++ b/Perfiles/templates/registro.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-  <h2>Registro</h2>
-  <form method="post">
+  <h2>Registro de Usuario</h2>
+  <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Registrarse</button>
