Agregando imagenes en about y enlace linkedin

--- a/MyAPP/templates/about.html
+++ b/MyAPP/templates/about.html
@@ -5,25 +5,29 @@
 
 <br>
 <br>
-
-
     <div class="container">
        <h2 class="text-center text-dark">
            Acerca de Mi!!
+           <h3 class="card-title mb-3">Sitio Creado por Ignacio Cuello</h3>
        </h2>
        <br>
-       <div class="row g-4">
-           <div class="col-md-6 col-lg-3">
+       <div class="row g-2">
+           <div class="col-md-6 col-lg-1">
+            
                <div class="card bg-success">
                     <div class="card-body text-center">
-                        <img src="{% static 'imagenes/jp2.jpeg' %}" class="rounded-circle mb-3" width="150px">
-                    <h3 class="card-title mb-3">Sitio Creado por Ignacio Cuello</h3>
+                        <img src="{% static 'imagenes/about.jpg' %}
+                        " class="rounded-circle mb-3" width="85px">
                     <p class="card-text">Estiduante python.</p>
                     <p class="card-text">Sigueme en:</p>
-                    <a href="https://github.com/Icuellos/ProyectoFinal_Ignacio_Cuello"><i class="bi bi-github text-dark mx-1"></i></a>
-                    <a href="www.linkedin.com/in/ignacio-cuello-958720127
-                    "><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                    </div>
+                    <p class="card-text">https://www.linkedin.com/in/ignacio-cuello-958720127</p>
+                    
+                    </div><a href=>
+                        <i class="bi bi-linkedin text-dark mx-1"><i>
+                      </a>
+                      
+                    <div 
+                    </div>    
                </div>
            </div>
            <div class="col">
