--- a/MyAPP/templates/index.html
+++ b/MyAPP/templates/index.html
@@ -5,25 +5,8 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Logo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#inicio">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#donacion">Donación</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#juguetes">Juguetes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contacto">Contacto</a>
-          </li>
-        </ul>
+        <ul class="navbar-nav"></ul>
       </div>
     </div>
   </nav>
@@ -44,9 +27,8 @@
   <p>
     Lograr ayudar a la mayor cantidad de familias que se encuentran en situación de pobreza o que atraviesa situaciones vulnerables, a través de donaciones recibidas por nuestros aliados y todas aquellas personas que emprenden trabajo social y contribuyen con nuestra labor siempre protegiendo y fomentando valores y respeto al medio ambiente.
   </p>
-  <img src="{% static '' %}" alt="" width="120">
+  <img src="{% static '' %}" alt="" width="100">
 </section>
-
 <section id="donacion">
   <h2>Donación de Juguetes</h2>
   <p>
