--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li><a href="/buscar/">Buscar</a></li>
-            <li><a href="/Contacto/">Contacto</a></li>
+            <li><a href="/contacto/">Contacto</a></li>
             <li><a href="/About">About</a></li>
             {% if user.is_authenticated %}
                 <li><a href="{% url 'logout' %}">Cerrar sesión</a></li>
