--- a/MyAPP/templates/buscar.html
+++ b/MyAPP/templates/buscar.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Busca tu equipo o liga de preferencia!!</h1>
+    <h1>Buscar articulo!!</h1>
 
     <form method="POST" action="{% url 'buscar' %}">
         {% csrf_token %}
@@ -13,7 +13,7 @@
     </form>
 
     {% if equipos %}
-        <h2>Resultado de la búsqueda: Equipo!!</h2>
+        <h2>Resultado de la búsqueda!!</h2>
         <ul>
             {% for equipo in equipos %}
                 <li>{{ equipo.name }}</li>
@@ -22,7 +22,7 @@
     {% endif %}
 
     {% if ligas %}
-        <h2>Resultados de la búsqueda: Liga!!</h2>
+        <h2>Resultados de la búsqueda</h2>
         <ul>
             {% for liga in ligas %}
                 <li>{{ liga.name }}</li>
