--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -17,7 +17,7 @@
 </head>    
 <body>
 <header>
-    <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciontes!!</span></h2>
+    <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones!!</span></h2>
     <nav>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
@@ -54,5 +54,6 @@
 </footer>
 </body>
 </html>
+
 
 
