--- a/Perfiles/templates/iniciar_sesion.html
+++ b/Perfiles/templates/iniciar_sesion.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>Registro de usuario</h2>
+    <h2>Iniciar sesión</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Registrarse</button>
+        <button type="submit">Iniciar sesión</button>
     </form>
 {% endblock %}
-
