--- a/Perfiles/templates/login.html
+++ b/Perfiles/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h2>Iniciar sesión</h2>
-  <form method="POST">
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Iniciar sesión</button>
