--- a/MyAPP/templates/crear_articulo.html
+++ b/MyAPP/templates/crear_articulo.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Crear artículo</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Guardar</button>
-  </form>
+    <h1>Ingresar Nuevo Artículo</h1>
+
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ formulario.as_p }}
+        <button type="submit">Crear</button>
+    </form>
 {% endblock %}
