--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -21,7 +21,7 @@
     <nav>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
-            <li><a href="/Proyectos">Ligas</a></li>
+            <li><a href="/Proyectos">Articulos</a></li>
             <li><a href="/Equipo">Equipos Infantiles</a></li>
             <li>
                 <a href="#">Articulos</a>
