Mejorando vista about

--- a/MyAPP/templates/about.html
+++ b/MyAPP/templates/about.html
@@ -21,12 +21,9 @@
                     <p class="card-text">Estiduante python.</p>
                     <p class="card-text">Sigueme en:</p>
                     <p class="card-text">https://www.linkedin.com/in/ignacio-cuello-958720127</p>
-                    
-                    </div><a href=>
-                        <i class="bi bi-linkedin text-dark mx-1"><i>
-                      </a>
+                    </div>
                       
-                    <div 
+                    <div>
                     </div>    
                </div>
            </div>
