agregando perfil linkedin

--- a/MyAPP/templates/about.html
+++ b/MyAPP/templates/about.html
@@ -20,7 +20,9 @@
                         " class="rounded-circle mb-3" width="120px">
                     <p class="card-text">Estiduante python.</p>
                     <p class="card-text">Sigueme en:</p>
-                    <p class="card-text">https://www.linkedin.com/in/ignacio-cuello-958720127</p>
+                    <p class="card-text">
+                        <a href="https://www.linkedin.com/in/ignacio-cuello-958720127">https://www.linkedin.com/in/ignacio-cuello-958720127</a>
+                    </p>
                     </div>
                       
                     <div>
@@ -29,7 +31,7 @@
            </div>
            <div class="col">
             <div class="">
-                 <div class="text-center">
+                 <div class="text-right">
                     <p>MI nombre es Ignacio Cuello estudiante de python en la comisión #40440 en CoderHouse. Hace más de 10 años me dedico al amálisis espacial e información geográfica. Actualmente trabajando como asistente técnico en consultora ambiental "ADAPTA Ingenieria Ambiental". No dejes de visitarme en las redes sociales!!  :)</p>
                  </div>
             </div>
