--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -52,14 +52,26 @@
             <li><a href="/buscar/">Buscar</a></li>
             <li><a href="/contacto/">Contacto</a></li>
             <li><a href="/About">About</a></li>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+            <script>
+                $(document).ready(function() {
+                    $('.dropdown-menu .dropdown-item').click(function() {
+                        $('.dropdown').removeClass('show');
+                    });
+                });
+            </script>
+            {% if user.is_authenticated %}
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                    <div style="display: inline-flex;">
-                        <span>{{ user.username }}</span>
-                    </div>
+                    {{ user.username }}
                 </button>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'Perfiles:logout' %}">Cerrar sesión</a></li>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="{% url 'Perfiles:logout' %}">Cerrar sesión</a></li>
+                </ul>
+            </div>
+            </button>
+            
             {% else %}
                 <li><a href="{% url 'Perfiles:login' %}">Iniciar sesión</a></li>
                 <li><a href="{% url 'Perfiles:registro' %}">Registrarse</a></li>
