--- a/MyAPP/templates/contacto.html
+++ b/MyAPP/templates/contacto.html
@@ -20,6 +20,17 @@
             <br>
             <input type="submit" value="Enviar">
         </form>
+
+        div class="card bg-success">
+                    <div class="card-body text-center">
+                    <p class="card-text">
+                        <a href="https://www.Google.com">Google</a>
+                    </p>
+                    </div>
+                      
+                    <div>
+                    </div>    
+               </div>
     {% endif %}
 {% endblock %}
 
