--- a/MyAPP/templates/about.html
+++ b/MyAPP/templates/about.html
@@ -18,10 +18,12 @@
                     <div class="card-body text-center">
                         <img src="{% static 'imagenes/about.jpg' %}
                         " class="rounded-circle mb-3" width="120px">
-                    <p class="card-text">Estiduante python.</p>
+                    <p class="card-text">Estiduante python en:</p>
+                    <a href="https://www.coderhouse.com">Coder House</a>
                     <p class="card-text">Sigueme en:</p>
                     <p class="card-text">
                         <a href="https://www.linkedin.com/in/ignacio-cuello-958720127">https://www.linkedin.com/in/ignacio-cuello-958720127</a>
+                        <a href="https://www.">Coder House</a>
                     </p>
                     </div>
                       
