--- a/MyAPP/templates/eliminar_liga.html
+++ b/MyAPP/templates/eliminar_liga.html
@@ -1,5 +1,5 @@
-<h1>Eliminar Liga</h1>
-<p>¿Estás seguro de que quieres eliminar la liga "{{ liga.name }}"?</p>
+<h1>Eliminar articulo</h1>
+<p>¿Estás seguro de que quieres eliminar la liga "{{ articulo.name }}"?</p>
 
 <form method="post">
   {% csrf_token %}
