--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -1,27 +1,17 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Donaciones de juguetes</title>
-        <!-- Favicon-->
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-
-    </head>
-<html>
 <head>
     <meta charset="UTF-8">
-    <title>Tu título de página</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Donaciones de juguetes</title>
+    <!-- Favicon-->
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     <style>
         .nav-links {
             list-style: none;
@@ -29,75 +19,59 @@
             justify-content: space-between;
         }
         .nav-links li {
-            margin-center: 0px;
+            margin-right: 10px;
         }
     </style>
-</head>    
+</head>
 <body>
-<header>
-    <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones!!</span></h2>
-    <nav class="navbar navbar-light bg-light static-top">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'index' %}">Home</a>
-            <a class="navbar-brand" href="{% url 'Proyectos' %}">Articulos</a>
-            <a class="navbar-brand" href="{% url 'crear_articulo' %}">Ingrese nuevo articulo</a>
-            <a class="navbar-brand" href="{% url 'Crear_Equipo' %}">Ingrese Nuevo Equipo</a>
-            <a class="navbar-brand" href="{% url 'buscar' %}">Buscar Articulo</a>
-            <a class="navbar-brand" href="{% url 'contacto' %}">Contacto</a>
-            <a class="navbar-brand" href="{% url 'about' %}">About</a>
-                
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <header>
+        <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones!!</span></h2>
+        <nav class="navbar navbar-light bg-light static-top">
+            <div class="container">
+                <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+                <a class="navbar-brand" href="{% url 'Proyectos' %}">Articulos</a>
+                <a class="navbar-brand" href="{% url 'crear_articulo' %}">Ingrese nuevo articulo</a>
+                <a class="navbar-brand" href="{% url 'buscar' %}">Buscar Articulo</a>
+                <a class="navbar-brand" href="{% url 'contacto' %}">Contacto</a>
+                <a class="navbar-brand" href="{% url 'about' %}">About</a>
 
-            <script>
-                $(document).ready(function() {
-                    $('.dropdown-menu .dropdown-item').click(function() {
-                        $('.dropdown').removeClass('show');
-                    });
-                });
-            </script>
-            {% if user.is_authenticated %}
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                    {{ user.username }}
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <li><a class="dropdown-item" href="{% url 'Perfiles:logout' %}">Cerrar sesión</a></li>
-                </ul>
+                {% if user.is_authenticated %}
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                        {{ user.username }}
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="{% url 'Perfiles:logout' %}">Cerrar sesión</a></li>
+                    </ul>
+                </div>
+                {% else %}
+                <a class="navbar-brand" href="{% url 'Perfiles:login' %}">Iniciar sesión</a>
+                <a class="navbar-brand" href="{% url 'Perfiles:registro' %}">Registrarse</a>
+                {% endif %}
             </div>
-            </button>
-            
-            {% else %}
-                <li><a href="{% url 'Perfiles:login' %}">Iniciar sesión</a></li>
-                <li><a href="{% url 'Perfiles:registro' %}">Registrarse</a></li>
-            {% endif %}
-        </ul>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
-<main>
-    {% block content %}
-    {% endblock %}
-</main>
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 
-<section style="padding:80px 50px;">
-    {% block contenido %}
-    {% endblock contenido %}
-</section>
+    <footer>
+    </footer>
 
-<footer>
-</footer>
- <!-- Bootstrap core JS-->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
- <!-- Core theme JS-->
- <script src="{% static 'js/scripts.js' %}"></script>
- <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
- <!-- * *                               SB Forms JS                               * *-->
- <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
- <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="{% static 'js/scripts.js' %}"></script>
+    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+    <!-- * *                               SB Forms JS                               * *-->
+    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
+
 
 
 
