--- a/Perfiles/templates/login.html
+++ b/Perfiles/templates/login.html
@@ -4,7 +4,10 @@
   <h2>Iniciar sesión</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    <label for="id_username">Nombre de usuario:</label>
+    <input type="text" name="username" id="id_username">
+    <label for="id_password">Contraseña:</label>
+    <input type="password" name="password" id="id_password">
     <button type="submit">Iniciar sesión</button>
   </form>
 {% endblock %}
