--- a/MyAPP/templates/lista_articulos.html
+++ b/MyAPP/templates/lista_articulos.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
-{% load static %}
 {% block content %}
-  <h2>Articulos</h2>
+  <h2>Artículos</h2>
   <ul>
     {% for articulo in articulos %}
       <li>
-        <h3>{{ articulo.titulo }}</h3>
+        <a href="{% url 'detalle_articulo' articulo.id %}">
+          <h3>{{ articulo.titulo }}</h3>
+        </a>
         <p>Autor: {{ articulo.autor }}</p>
         <p>Fecha de publicación: {{ articulo.fecha_publicacion }}</p>
         <p>Contenido: {{ articulo.contenido }}</p>
