Entrega final proyecto CoderHouse comision 40440

--- a/MyAPP/templates/buscar.html
+++ b/MyAPP/templates/buscar.html
@@ -15,7 +15,7 @@
     {% if articulo %}
         <h2>Resultado de la búsqueda!!</h2>
         <ul>
-            {% for articulo in articulos %}
+            {% for articulo in Articulos %}
                 <li>{{ articulo.titulo }}</li>
             {% endfor %}
         </ul>
