--- a/MyAPP/templates/Proyectos.html
+++ b/MyAPP/templates/Proyectos.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <h1>Proyecto</h1>
+    <h1>Articulos</h1>
     <ul>
         {% for articulo in articulos %}
             <li>
