--- a/MyAPP/templates/actualizar_articulo.html
+++ b/MyAPP/templates/actualizar_articulo.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h2>Crear Nuevo Artículo</h2>
+  <h2>Actualizar Artículo</h2>
   <form method="post">
     {% csrf_token %}
     {{ formulario.as_p }}
-    <button type="submit">Crear</button>
+    <button type="submit">Guardar</button>
   </form>
 {% endblock %}
