--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -30,6 +30,7 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url 'index' %}">Home</a>
                 <a class="navbar-brand" href="{% url 'Proyectos' %}">Articulos</a>
+                <a class="navbar-brand" href="{% url 'detalle_articulo' articulo_id=1 %}">Detalle de Articulos</a>
                 <a class="navbar-brand" href="{% url 'crear_articulo' %}">Ingrese nuevo articulo</a>
                 <a class="navbar-brand" href="{% url 'buscar' %}">Buscar Articulo</a>
                 <a class="navbar-brand" href="{% url 'contacto' %}">Contacto</a>
