--- a/MyAPP/templates/buscar.html
+++ b/MyAPP/templates/buscar.html
@@ -9,7 +9,7 @@
         {{ form.tipo_busqueda }}
         {{ form.termino.label_tag }}
         {{ form.termino }}
-        <button type="submit">Buscar</button>
+        <button type="submit" class="btn btn-primary">Buscar Articulo</button>
     </form>
 
     {% if articulo %}
