--- a/MyAPP/templates/contacto.html
+++ b/MyAPP/templates/contacto.html
@@ -18,7 +18,7 @@
             <label for="mensaje">Dejanos un mensaje:</label>
             <textarea id="mensaje" name="mensaje" required></textarea>
             <br>
-            <input type="submit" value="Enviar">
+            <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
 
         
