--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -1,31 +1,29 @@
-{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
+        <title>{% block title %}{% endblock %} Donaciones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donaciones de juguetes</title>
-    <!-- Favicon-->
-    <!-- Bootstrap icons-->
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-    <style>
-        .nav-links {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-        }
-        .nav-links li {
-            margin-right: 10px;
-        }
-    </style>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />  
 </head>
+
 <body>
+    <div class="card bg-success">
+    <div class="navbar">
+        <a class="navbar-logo" href="{% url 'index' %}">
+            <img src="{% static 'imagenes/Logo.jpg' %}" alt="Logo de la empresa"class="rounded-circle mb-3" width="160px">
+        </a>
+    </div>    
     <header>
-        <h2>Bienvenid@s a la <span class="text-primary">Pagina de donaciones!!</span></h2>
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url 'index' %}">Home</a>
@@ -36,7 +34,7 @@
                 <a class="navbar-brand" href="{% url 'contacto' %}">Contacto</a>
                 <a class="navbar-brand" href="{% url 'about' %}">About</a>
 
-                {% if user.is_authenticated %}
+            {% if user.is_authenticated %}
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         {{ user.username }}
@@ -45,10 +43,10 @@
                         <li><a class="dropdown-item" href="{% url 'Perfiles:logout' %}">Cerrar sesión</a></li>
                     </ul>
                 </div>
-                {% else %}
+            {% else %}
                 <a class="navbar-brand" href="{% url 'Perfiles:login' %}">Iniciar sesión</a>
                 <a class="navbar-brand" href="{% url 'Perfiles:registro' %}">Registrarse</a>
-                {% endif %}
+            {% endif %}
             </div>
         </nav>
     </header>
@@ -71,7 +69,7 @@
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
-</html>
+
 
 
 
