--- a/MyAPP/templates/crear_articulo.html
+++ b/MyAPP/templates/crear_articulo.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
+{% block title %}Crear Nuevo Articulo!!{% endblock %}
 {% block content %}
   <h2>Crear Nuevo Artículo</h2>
   <form method="post">
     {% csrf_token %}
     {{ formulario.as_p }}
-    <button type="submit">Crear</button>
+    <button type="submit" class="btn btn-primary">Crear Articulo</button>
   </form>
 {% endblock %}
