--- a/MyAPP/templates/index.html
+++ b/MyAPP/templates/index.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
-{% load static %}
-{% block content %}
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    
+    {% load static %}
+   
+</head>
 
+    {% block content %}
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
