--- a/Perfiles/templates/login.html
+++ b/Perfiles/templates/login.html
@@ -1,13 +1,32 @@
+<!DOCTYPE html>
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Iniciar sesión</h2>
+<div class="container">
+  <div class="right">
+       <h2>Iniciar sesión</h2>
+  </div>
+  <div class="right">
+    {% if error_message %}
+    <p class="alert alert-danger">{{ error_message }}</p>
+{% endif %}
   <form method="post">
     {% csrf_token %}
-    <label for="id_username">Nombre de usuario:</label>
-    <input type="text" name="username" id="id_username">
-    <label for="id_password">Contraseña:</label>
-    <input type="password" name="password" id="id_password">
-    <button type="submit">Iniciar sesión</button>
+    <div class="form-group">
+      <label for="id_username">Nombre de usuario:</label>
+      <input type="text" name="username" id="id_username">
+    </div>  
+    <div class="form-group">  
+      <label for="id_password">Contraseña:</label>
+      <input type="password" name="password" id="id_password">
+    </div>
+      <button type="submit" class="btn btn-primary">Iniciar sesión</button>
   </form>
+  </div>
+  </div>
 {% endblock %}
+
+
+       
+        
+
