--- a/Perfiles/templates/perfil_create.html
+++ b/Perfiles/templates/perfil_create.html
@@ -3,6 +3,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Crear</button>
+    <button type="submit" class="btn btn-primary">Crear Perfil</button>
   </form>
 {% endblock %}
