Registros de usuarios

--- a/MyAPP/templates/base.html
+++ b/MyAPP/templates/base.html
@@ -1,9 +1,9 @@
 
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
         <title>{% block title %}{% endblock %} Donaciones</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/navbar.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -69,6 +69,7 @@
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
+</html>
 
 
 
