--- a/MyAPP/templates/detalle_articulo.html
+++ b/MyAPP/templates/detalle_articulo.html
@@ -1,16 +1,24 @@
 {% extends 'base.html' %}
-{% load static %}
 
 {% block content %}
-  <h2>Detalle de Artículo</h2>
-  <h3>{{ articulo.titulo }}</h3>
-  <p>Juguete: {{ articulo.juguete }}</p>
-  <p>Subtítulo: {{ articulo.subtitulo }}</p>
-  <p>Autor: {{ articulo.autor }}</p>
-  <p>Fecha de publicación: {{ articulo.fecha }}</p>
-  <p>Contenido: {{ articulo.cuerpo }}</p>
-  {% if articulo.imagen %}
-    <img src="{{ articulo.imagen.url }}" alt="Imagen del artículo">
+  {% if articulo %}
+    <h2>Detalle de Artículo</h2>
+    <h3>{{ articulo.titulo }}</h3>
+    <p>Juguete: {{ articulo.juguete }}</p>
+    <p>Subtítulo: {{ articulo.subtitulo }}</p>
+    <p>Autor: {{ articulo.autor }}</p>
+    <p>Fecha de publicación: {{ articulo.fecha }}</p>
+    <p>Contenido: {{ articulo.cuerpo }}</p>
+    {% if articulo.imagen %}
+      <img src="{{ articulo.imagen.url }}" alt="Imagen del artículo">
+    {% endif %}
+    {% if user.is_authenticated and user == articulo.autor %}
+      <a href="{% url 'actualizar_articulo' articulo.id %}">Editar</a>
+      <a href="{% url 'eliminar_articulo' articulo.id %}">Eliminar</a>
+    {% endif %}
+    <a href="{% url 'lista_articulos' %}">Volver atrás</a>
+  {% else %}
+    <p>No hay artículos disponibles en este momento.</p>
+    <a href="{% url 'lista_articulos' %}">Volver atrás</a>
   {% endif %}
-  <a href="{% url 'actualizar_articulo' articulo.id %}">Editar</a>
 {% endblock %}
