--- a/Perfiles/templates/registro.html
+++ b/Perfiles/templates/registro.html
@@ -3,35 +3,17 @@
 {% block content %}
 <div class="container">
     <div class="left">
-      <h2>Registro de usuario</h2>
+        <h2>Registro de usuario</h2>
     </div>
     <div class="right">
         {% if error_message %}
-          <p class="alert alert-danger">{{ error_message }}</p>
+        <p class="alert alert-danger">{{ error_message }}</p>  <!-- Mostrar el mensaje de error -->
         {% endif %}
         <form method="post">
-          {% csrf_token %}  
-          <div class="form-group">
-            <label for="username">Usuario:</label>
-            <input type="text" name="username" class="form-control" value="{{ username }}" required>
-          </div>
-          <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" name="password1" class="form-control" value="" required>
-          </div>
-          <div class="form-group">
-            <label for="confirm_password">Confirmar Contraseña:</label>
-            <input type="password" name="password2" class="form-control" value="" required>
-            {% if password_mismatch %}
-              <p class="text-danger">Las contraseñas no coinciden. Por favor, inténtalo nuevamente.</p>
-            {% endif %}
-          </div>
-          <button type="submit" class="btn btn-primary">Registrarse</button>
+            {% csrf_token %}  
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Registrarse</button>
         </form>
     </div>
 </div>   
 {% endblock %}
-
-
-
-
